--- a/src/i18n/locales/ta.json
+++ b/src/i18n/locales/ta.json
@@ -8,7 +8,25 @@
     "dashboard": "டாஷ்போர்டு",
     "language": "மொழி",
     "english": "ஆங்கிலம்",
-    "tamil": "தமிழ்"
+    "tamil": "தமிழ்",
+    "loading": "ஏற்றுகிறது...",
+    "error": "பிழை",
+    "success": "வெற்றி",
+    "save": "சேமி",
+    "cancel": "ரத்து செய்",
+    "delete": "அழி",
+    "edit": "திருத்து",
+    "view": "காண்க",
+    "back": "பின்செல்",
+    "next": "அடுத்து",
+    "submit": "சமர்ப்பி",
+    "search": "தேடு",
+    "filter": "வடிகட்டு",
+    "sort": "வரிசைப்படுத்து",
+    "refresh": "புதுப்பி",
+    "noResults": "முடிவுகள் எதுவும் கிடைக்கவில்லை",
+    "required": "தேவை",
+    "optional": "விருப்ப"
   },
   "header": {
     "title": "கிராமப்புற ஜென்ஏஐ நல்வாழ்வு",
@@ -24,7 +42,21 @@
     "dontHaveAccount": "கணக்கு இல்லையா?",
     "createAccount": "கணக்கு உருவாக்கு",
     "loginError": "தவறான பயனர் பெயர் அல்லது கடவுச்சொல்",
-    "loginSuccess": "வெற்றிகரமாக உள்நுழைந்துள்ளீர்கள்"
+    "loginSuccess": "வெற்றிகரமாக உள்நுழைந்துள்ளீர்கள்",
+    "register": "பதிவு செய்",
+    "resetPassword": "கடவுச்சொல்லை மீட்டமை",
+    "email": "மின்னஞ்சல்",
+    "confirmPassword": "கடவுச்சொல்லை உறுதிப்படுத்து",
+    "name": "பெயர்",
+    "phone": "தொலைபேசி",
+    "role": "பங்கு",
+    "selectRole": "பங்கைத் தேர்வு செய்",
+    "roles": {
+      "customer": "வாடிக்கையாளர்",
+      "healthSakhi": "ஆரோக்கிய சகி",
+      "lab": "ஆய்வகம்",
+      "coordinator": "ஒருங்கிணைப்பாளர்"
+    }
   },
   "dashboard": {
     "welcome": "உங்கள் டாஷ்போர்டுக்கு வரவேற்கிறோம்",
@@ -61,7 +93,30 @@
     "pendingResults": "நிலுவையிலுள்ள முடிவுகள்",
     "resultsToDeliver": "வழங்கப்பட வேண்டிய முடிவுகள்",
     "recentRequests": "சமீபத்திய சோதனை கோரிக்கைகள்",
-    "comingSoon": "ஆய்வக டாஷ்போர்டு செயல்பாடுகள் விரைவில் வரும்!"
+    "comingSoon": "ஆய்வக டாஷ்போர்டு செயல்பாடுகள் விரைவில் வரும்!",
+    "name": "ஆய்வகம்",
+    "profile": "சுயவிவரம்",
+    "customers": "வாடிக்கையாளர்கள்",
+    "services": "சேவைகள்",
+    "messages": "செய்திகள்",
+    "mapView": "வரைபடக் காட்சி",
+    "customerList": "வாடிக்கையாளர் பட்டியல்",
+    "active": "செயலில்",
+    "inYourArea": "உங்கள் பகுதியில்",
+    "servicesOffered": "வழங்கப்படும் சேவைகள்",
+    "healthSakhi": "ஆரோக்கிய சகி",
+    "noHealthSakhi": "ஆரோக்கிய சகி ஒதுக்கப்படவில்லை",
+    "sendMessage": "செய்தி அனுப்பு",
+    "newMessage": "புதிய செய்தி",
+    "messageType": {
+      "appointment": "நேரம் பதிவு",
+      "result": "சோதனை முடிவு",
+      "message": "செய்தி"
+    },
+    "messageStatus": {
+      "read": "படிக்கப்பட்டது",
+      "unread": "படிக்கப்படவில்லை"
+    }
   },
   "customer": {
     "dashboard": "வாடிக்கையாளர் டாஷ்போர்டு",
@@ -86,6 +141,51 @@
     "listen": "🔊 கேட்க",
     "textToSpeech": "உரை-முதல்-பேச்சு",
     "playingAudio": "ஆடியோ இயக்கப்படுகிறது...",
-    "audioError": "ஆடியோவை இயக்க முடியவில்லை. மீண்டும் முயற்சிக்கவும்."
+    "audioError": "ஆடியோவை இயக்க முடியவில்லை. மீண்டும் முயற்சிக்கவும்.",
+    "name": "வாடிக்கையாளர்",
+    "profile": "சுயவிவரம்",
+    "appointments": "நேரம் பதிவு",
+    "testResults": "சோதனை முடிவுகள்",
+    "messages": "செய்திகள்",
+    "appointmentsScheduled": "நேரம் பதிவு செய்யப்பட்டுள்ளன",
+    "completedTests": "முடிந்த சோதனைகள்",
+    "noHealthSakhi": "ஆரோக்கிய சகி ஒதுக்கப்படவில்லை",
+    "sendMessage": "செய்தி அனுப்பு",
+    "newMessage": "புதிய செய்தி",
+    "messageType": {
+      "appointment": "நேரம் பதிவு",
+      "result": "சோதனை முடிவு",
+      "message": "செய்தி"
+    },
+    "messageStatus": {
+      "read": "படிக்கப்பட்டது",
+      "unread": "படிக்கப்படவில்லை"
+    }
+  },
+  "healthSakhi": {
+    "name": "ஆரோக்கிய சகி",
+    "dashboard": "டாஷ்போர்டு",
+    "profile": "சுயவிவரம்",
+    "customers": "வாடிக்கையாளர்கள்",
+    "appointments": "நேரம் பதிவு",
+    "messages": "செய்திகள்",
+    "mapView": "வரைபடக் காட்சி",
+    "customerList": "வாடிக்கையாளர் பட்டியல்",
+    "active": "செயலில்",
+    "inYourArea": "உங்கள் பகுதியில்",
+    "appointmentsScheduled": "நேரம் பதிவு செய்யப்பட்டுள்ளன",
+    "lab": "ஆய்வகம்",
+    "noLab": "ஆய்வகம் ஒதுக்கப்படவில்லை",
+    "sendMessage": "செய்தி அனுப்பு",
+    "newMessage": "புதிய செய்தி",
+    "messageType": {
+      "appointment": "நேரம் பதிவு",
+      "result": "சோதனை முடிவு",
+      "message": "செய்தி"
+    },
+    "messageStatus": {
+      "read": "படிக்கப்பட்டது",
+      "unread": "படிக்கப்படவில்லை"
+    }
   }
 } 
